--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,90 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFEFC"
+    android:background="@color/back_color"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="@string/title"
+        android:textColor="@color/text_color"
+        android:textSize="28sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFEFC"
+        android:background="@color/back_color"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="#FFFEFC"
+            android:background="@color/back_color"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:color="#616161"
-                android:textColor="#43A047"
-                android:fontFamily="sans-serif-medium"
                 android:gravity="center_horizontal"
-                android:text="Team A"
+                android:text="@string/team_name_a"
+                android:textColor="@color/text_color"
                 android:textSize="28sp" />
-            <TextView
-                android:id="@+id/team_a_diff"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:color="#616161"
-                android:textColor="#43A047"
-                android:fontFamily="sans-serif-medium"
-                android:gravity="center_horizontal"
-                android:text="±0"
-                android:textSize="20sp" />
+                android:layout_weight="4"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/team_a_diff"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:text="@integer/difference_view_a"
+                    android:textColor="@color/text_color"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/plus_minus"
+                    android:textColor="@color/text_color"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/team_a_score"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:textColor="#43A047"
-                    android:fontFamily="sens-serif-light"
                     android:gravity="center_horizontal"
-                    android:text="0"
+                    android:text="@integer/goal_view_a"
+                    android:textColor="@color/text_color"
                     android:textSize="56sp" />
+
                 <TextView
                     android:id="@+id/team_a_foul"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:textColor="#43A047"
-                    android:fontFamily="sens-serif-light"
                     android:gravity="center_horizontal"
-                    android:text="0"
+                    android:text="@integer/foul_view_a"
+                    android:textColor="@color/text_color"
                     android:textSize="23sp" />
             </LinearLayout>
+
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Goal"
-                    android:onClick="addOneForTeamA"/>
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Foul"
-                    android:onClick="addOneFoulTeamA"/>
+                    android:onClick="addOneForTeamA"
+                    android:text="@string/goal_button_a" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:onClick="addOneFoulTeamA"
+                    android:text="@string/foul_button_a" />
             </LinearLayout>
         </LinearLayout>
 
@@ -98,72 +119,89 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:background="#FFFEFC"
+            android:background="@color/back_color"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:color="#616161"
-                android:fontFamily="sans-serif-medium"
                 android:gravity="center_horizontal"
-                android:text="Team B"
-                android:textColor="#43A047"
+                android:text="@string/team_name_b"
+                android:textColor="@color/text_color"
                 android:textSize="28sp" />
-            <TextView
-                android:id="@+id/team_b_diff"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:color="#616161"
-                android:textColor="#43A047"
-                android:fontFamily="sans-serif-medium"
-                android:gravity="center_horizontal"
-                android:text="±0"
-                android:textSize="20sp" />
+                android:layout_weight="4"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/team_b_diff"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:text="@integer/difference_view_b"
+                    android:textColor="@color/text_color"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/plus_minus"
+                    android:textColor="@color/text_color"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/team_b_score"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:textColor="#43A047"
-                    android:fontFamily="sens-serif-light"
                     android:gravity="center_horizontal"
-                    android:text="0"
+                    android:text="@integer/goal_view_b"
+                    android:textColor="@color/text_color"
                     android:textSize="56sp" />
+
                 <TextView
                     android:id="@+id/team_b_foul"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:textColor="#43A047"
-                    android:fontFamily="sens-serif-light"
                     android:gravity="center_horizontal"
-                    android:text="0"
+                    android:text="@integer/foul_view_b"
+                    android:textColor="@color/text_color"
                     android:textSize="23sp" />
             </LinearLayout>
+
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
+
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Goal"
-                    android:onClick="addOneForTeamB"/>
+                    android:onClick="addOneForTeamB"
+                    android:text="@string/goal_button_b" />
+
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Foul"
-                    android:onClick="addOneFoulTeamB"/>
+                    android:onClick="addOneFoulTeamB"
+                    android:text="@string/foul_button_b" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -174,14 +212,12 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:onClick="resetTeams"
-        android:text="Reset" />
+        android:text="@string/reset_button" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        android:src="@drawable/field"
-        android:tint="#43A047"
-        android:tintMode="screen" />
+        android:src="@drawable/soccer_small" />
 
 </LinearLayout>
