--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,11 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary theme color of the app (sets background color of app bar) -->
         <item name="colorPrimary">#43A047</item>
         <item name="android:textColorPrimary">#FFFFFF</item>
         <!-- Background color of buttons in the app -->
-        <item name="colorButtonNormal">#43A047</item>
+        <item name="colorButtonNormal">#4f6d56</item>
         <!--Color of Text-->
         <item name="android:textColor">#FFFFFF</item>
     </style>
